fix: overlapping on smaller screens

--- a/components/Navigation/navigation.css
+++ b/components/Navigation/navigation.css
@@ -115,7 +115,7 @@
 
   .menu-overlay {
     position: fixed;
-    top: 0;
+    top: 80px;
     right: 0;
     bottom: 0;
     left: 0;
@@ -126,6 +126,17 @@
   .menu-overlay-inner {
     height: 100%;
     width: 100%;
+  }
+
+  .menu-nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: clamp(1.25rem, 4vh, 2.5rem);
+    font-size: clamp(1.5rem, 4vw, 3rem);
+    width: 100%;
+    height: 100%;
   }
 
   .menu-link-metrics {
